--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscanvas",
     "displayName": "vs-code-canvas",
     "description": "HTML canvas preview for VSCode",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "author": "Stefan Goessner",
     "publisher": "goessner",
     "galleryBanner": {
@@ -12,7 +12,7 @@
     "homepage": "",
     "repository": {
       "type": "git",
-      "url": "https://github.com/goessner/g2.git"
+      "url": "https://github.com/goessner/vscanvas.git"
     },
     "license": "SEE LICENSE IN license.txt",
     "engines": {
